# adipocyte-perturbation-prediction

./: .gitignore  PATHS_QUICKSTART.md  PATH_MANAGEMENT.md  README.md  RUN_PIPELINE.md  SUBMISSION_GUIDE.md  main.nf  nextflow.config  package_submission.py  pyproject.toml  requirements.txt  run_full_pipeline.sh  setup_codespace.sh
broad-obesity-1-drugit/.crunchdao/: project.json  token
broad-obesity-1-drugit/broad-obesity-1-drugit/.crunchdao/: token
configs/: default.yaml
crunch_submission_template/: Method description.md  main.py  requirements.txt  utils.py
crunch_submission_template/resources/: config.yaml
crunch_submission_template/src/data/: __init__.py  dataset.py  knowledge_graph.py
crunch_submission_template/src/inference/: __init__.py  predict.py
crunch_submission_template/src/losses/: combined.py  pearson_delta.py
crunch_submission_template/src/models/: flow_matching.py  gat_encoder.py  proportion_head.py
crunch_submission_template/src/training/: callbacks.py
crunch_submission_template/src/utils/: README.md  __init__.py  paths.py
data/kg/: knowledge_graph.gpickle
data/processed/: all_genes.txt
experiments/: zero_shot_minimal_results.csv
notebooks/: get_started.ipynb  get_started_lightweight.ipynb
scripts/: build_kg.py  evaluate.py  evaluate_validation.py  evaluate_validation_quick.py  evaluate_zero_shot_minimal.py  evaluate_zero_shot_validation.py  extract_embeddings.py  extract_embeddings_lightweight.py  generate_submission.py  generate_submission_optimized.py  train.py
src/data/: knowledge_graph.py  loader.py
src/losses/: __init__.py  mmd.py
src/models/: __init__.py  flow_matching.py  full_model.py
src/training/: __init__.py  callbacks.py  trainer.py
venv_light/: pyvenv.cfg
