[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adipocyte-perturbation-prediction"
version = "0.1.0"
description = "Zero-Shot Adipocyte Perturbation Prediction using KG-Conditioned Flow Matching"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Koussai", email = "koussai@example.com"}
]
keywords = ["single-cell", "perturbation", "flow-matching", "knowledge-graph", "adipocyte"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core scientific
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    
    # Single-cell
    "scanpy>=1.9.0",
    "anndata>=0.10.0",
    "decoupler>=1.5.0",
    
    # Deep learning
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "torchdiffeq>=0.2.3",
    
    # Knowledge graph / Bio
    "networkx>=3.0",
    "goatools>=1.4.0",
    "requests>=2.31.0",
    
    # Experiment tracking
    "wandb>=0.16.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
geneformer = [
    "geneformer>=0.1.0",
    "transformers>=4.35.0",
]
notebooks = [
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
]

[project.urls]
"Homepage" = "https://github.com/koussai/adipocyte-perturbation-prediction"
"Bug Reports" = "https://github.com/koussai/adipocyte-perturbation-prediction/issues"

[project.scripts]
build-kg = "scripts.build_kg:main"
train = "scripts.train:main"
predict = "scripts.generate_submission:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src"
